# Data-Mining-IR

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-bert.txt  requirements-dev.txt  requirements.txt  run.bat  run.sh
api/: main.py
data/: README.md  sample_news.jsonl
docs/: PUBLISHING.md  ui-preview.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
notebooks/: demo.ipynb
scripts/: build_index.py  download_data.py  download_model.py  evaluate.py
src/news_search/: __init__.py  corpus.py  dense.py  engine.py  evaluate.py  expansion.py  index.py  preprocess.py  ranking.py
tests/: conftest.py  test_api.py  test_engine.py  test_evaluate.py  test_preprocess.py
