[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "news-search-engine"
version = "1.0.0"
description = "From-scratch TF-IDF news search engine with query expansion (PRF, WordNet, BERT)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mazen Mohammed", email = "mazen.mohammed.ict@gmail.com" }]
dependencies = ["nltk>=3.8"]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
bert = ["numpy>=1.24", "scikit-learn>=1.3", "sentence-transformers>=2.2"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
